fix flex wrap

--- a/src/pages/Country/index.css
+++ b/src/pages/Country/index.css
@@ -9,7 +9,9 @@
     justify-content: space-between;
     align-items:center;
     margin: 3rem 0;
+    flex-wrap: wrap;
 }
+
 
 .chart-container {
     margin-top: 1rem;
@@ -17,7 +19,7 @@
 
 .country-name {
     letter-spacing: 0.08em;
-    font-size: 2.5rem;
+    font-size: 2.2rem;
 }
 
 .chart-section-header {
